--- a/MAI_TOOLBOX/MAI-Toolbox/Baugruppenmeister/FRM_Baugruppenmeister.resx
+++ b/MAI_TOOLBOX/MAI-Toolbox/Baugruppenmeister/FRM_Baugruppenmeister.resx
@@ -138,4 +138,7 @@
   <metadata name="DGV_CTMS1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>357, 17</value>
   </metadata>
+  <metadata name="BG_Dataset.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
